optimized vanta for mobile, and fixed slight overflow-x issue

--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -16,7 +16,7 @@
   }
 
   .headerContent .navigation{
-      position: absolute;
+      position: relative;
       top: 10px;
       right: 10px;
       z-index: 1000;
