--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+html{
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+head .animatedBackground{
+  height: 100vh;
+  width: 100vw;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
